// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sql view matches snapshot 1`] = `
<div
  className="query-view app-view"
>
  <ColumnTree
    columnMetadataLoading={true}
    defaultSchema="druid"
    getParsedQuery={[Function]}
    onQueryChange={[Function]}
  />
  <t
    customClassName=""
    onDragEnd={null}
    onDragStart={null}
    onSecondaryPaneSizeChange={[Function]}
    percentage={true}
    primaryIndex={0}
    primaryMinSize={30}
    secondaryInitialSize={60}
    secondaryMinSize={30}
    vertical={true}
  >
    <div
      className="control-pane"
    >
      <QueryInput
        currentSchema="druid"
        onQueryStringChange={[Function]}
        queryString="test"
        runeMode={false}
      />
      <div
        className="control-bar"
      >
        <HotkeysTarget(RunButton)
          loading={true}
          onEditContext={[Function]}
          onExplain={[Function]}
          onHistory={[Function]}
          onPrettier={[Function]}
          onQueryContextChange={[Function]}
          onRun={[Function]}
          queryContext={Object {}}
          runeMode={false}
        />
        <Blueprint3.Tooltip
          content="Automatically wrap the query with a limit to protect against queries with very large result sets."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          transitionDuration={100}
        >
          <Blueprint3.Switch
            checked={true}
            className="smart-query-limit"
            label="Smart query limit"
            onChange={[Function]}
          />
        </Blueprint3.Tooltip>
        <Blueprint3.Popover
          boundary="scrollParent"
          captureDismiss={false}
          content={
            <Blueprint3.Menu>
              <Blueprint3.MenuItem
                disabled={false}
                icon="tick"
                multiline={false}
                onClick={[Function]}
                popoverProps={Object {}}
                shouldDismissPopover={true}
                text="Auto"
              />
              <Blueprint3.MenuItem
                disabled={false}
                icon="blank"
                multiline={false}
                onClick={[Function]}
                popoverProps={Object {}}
                shouldDismissPopover={true}
                text="On"
              />
              <Blueprint3.MenuItem
                disabled={false}
                icon="blank"
                multiline={false}
                onClick={[Function]}
                popoverProps={Object {}}
                shouldDismissPopover={true}
                text="Off"
              />
            </Blueprint3.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          minimal={true}
          modifiers={Object {}}
          openOnTargetFocus={true}
          position="bottom-left"
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
          wrapperTagName="span"
        >
          <Blueprint3.Button
            className="live-query-mode"
            minimal={true}
          >
            <span>
              Live query:
            </span>
             
            <span
              className="auto auto-on"
            >
              Auto
            </span>
          </Blueprint3.Button>
        </Blueprint3.Popover>
      </div>
    </div>
    <div
      className="output-pane"
    >
      <Memo(Loader)
        onCancel={[Function]}
      />
    </div>
  </t>
</div>
`;

exports[`sql view matches snapshot with query 1`] = `
<div
  className="query-view app-view"
>
  <ColumnTree
    columnMetadataLoading={true}
    defaultSchema="druid"
    getParsedQuery={[Function]}
    onQueryChange={[Function]}
  />
  <t
    customClassName=""
    onDragEnd={null}
    onDragStart={null}
    onSecondaryPaneSizeChange={[Function]}
    percentage={true}
    primaryIndex={0}
    primaryMinSize={30}
    secondaryInitialSize={60}
    secondaryMinSize={30}
    vertical={true}
  >
    <div
      className="control-pane"
    >
      <QueryInput
        currentSchema="druid"
        onQueryStringChange={[Function]}
        queryString="SELECT +3"
        runeMode={false}
      />
      <div
        className="control-bar"
      >
        <HotkeysTarget(RunButton)
          loading={true}
          onEditContext={[Function]}
          onExplain={[Function]}
          onHistory={[Function]}
          onPrettier={[Function]}
          onQueryContextChange={[Function]}
          onRun={[Function]}
          queryContext={Object {}}
          runeMode={false}
        />
        <Blueprint3.Tooltip
          content="Automatically wrap the query with a limit to protect against queries with very large result sets."
          hoverCloseDelay={0}
          hoverOpenDelay={800}
          transitionDuration={100}
        >
          <Blueprint3.Switch
            checked={true}
            className="smart-query-limit"
            label="Smart query limit"
            onChange={[Function]}
          />
        </Blueprint3.Tooltip>
        <Blueprint3.Popover
          boundary="scrollParent"
          captureDismiss={false}
          content={
            <Blueprint3.Menu>
              <Blueprint3.MenuItem
                disabled={false}
                icon="tick"
                multiline={false}
                onClick={[Function]}
                popoverProps={Object {}}
                shouldDismissPopover={true}
                text="Auto"
              />
              <Blueprint3.MenuItem
                disabled={false}
                icon="blank"
                multiline={false}
                onClick={[Function]}
                popoverProps={Object {}}
                shouldDismissPopover={true}
                text="On"
              />
              <Blueprint3.MenuItem
                disabled={false}
                icon="blank"
                multiline={false}
                onClick={[Function]}
                popoverProps={Object {}}
                shouldDismissPopover={true}
                text="Off"
              />
            </Blueprint3.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          minimal={true}
          modifiers={Object {}}
          openOnTargetFocus={true}
          position="bottom-left"
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
          wrapperTagName="span"
        >
          <Blueprint3.Button
            className="live-query-mode"
            minimal={true}
          >
            <span>
              Live query:
            </span>
             
            <span
              className="auto auto-on"
            >
              Auto
            </span>
          </Blueprint3.Button>
        </Blueprint3.Popover>
      </div>
    </div>
    <div
      className="output-pane"
    >
      <Memo(Loader)
        onCancel={[Function]}
      />
    </div>
  </t>
</div>
`;
